# ktt-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
src/ktt_mcp/: __init__.py  __main__.py  server.py  spec.py  workdir.py
src/ktt_mcp/prompts/: templates.py
src/ktt_mcp/resources/: docs.py  schema.py
src/ktt_mcp/resources/examples/: vector_add.cu  vector_add.json  vector_add_ref.cu
src/ktt_mcp/runtime/: pyktt_loader.py  reference.py  tuner_session.py
src/ktt_mcp/tools/: devices.py  explain_results.py  import_loader.py  import_yaml.py  profile.py  run.py  search_space.py  tune.py  validate.py
tests/: conftest.py  test_devices_smoke.py  test_explain_results.py  test_import_loader.py  test_import_yaml.py  test_search_space.py  test_server_smoke.py  test_spec.py  test_tune_e2e.py  test_workdir.py
tests/fixtures/: ktt_loader_sample.json  results_sample.json
tests/fixtures/legacy_problem/: kernel.cu  params.json  problem.yaml  ref_kernel.cu
